# Sahara-Studio

./: CMakeLists.txt  README.md  application.cpp  application.h  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sahara-studio.pro
colorwidget/: colorwidget.cpp  colorwidget.h
commands/: addscenegraphitemcommand.cpp  addscenegraphitemcommand.h  positionnodecommand.cpp  positionnodecommand.h  removescenegraphitemcommand.cpp  removescenegraphitemcommand.h  rotatenodecommand.cpp  rotatenodecommand.h  scalenodecommand.cpp  scalenodecommand.h  setmodelanimationcommand.cpp  setmodelanimationcommand.h  transformnodecommand.cpp  transformnodecommand.h  updatecameracommand.cpp  updatecameracommand.h  updatemodelmaterialcommand.cpp  updatemodelmaterialcommand.h  updatepointlightcommand.cpp  updatepointlightcommand.h  updatesceneambientlightcommand.cpp  updatesceneambientlightcommand.h
linkwidget/: linkwidget.cpp  linkwidget.h
nodedetailwidget/: nodedetailwidget.cpp  nodedetailwidget.h  nodedetailwidget.ui
nodeitemdetailwidget/camerawidget/: camerawidget.cpp  camerawidget.h  camerawidget.ui
nodeitemdetailwidget/modelwidget/: geometryitemmodel.cpp  geometryitemmodel.h  geometrymodel.cpp  geometrymodel.h  materialwidget.cpp  materialwidget.h  materialwidget.ui  modelwidget.cpp  modelwidget.h  modelwidget.ui
nodeitemdetailwidget/pointlightwidget/: pointlightwidget.cpp  pointlightwidget.h  pointlightwidget.ui
nodeitemdetailwidget/scenewidget/: scenewidget.cpp  scenewidget.h  scenewidget.ui
nodeitemdetailwidget/surfacewidget/: surfacewidget.cpp  surfacewidget.h  surfacewidget.ui
resources/: sahara-studio.icns  sahara-studio.rc
scenegraphwidget/: scenegraphitemmodel.cpp  scenegraphitemmodel.h  scenegraphtreeview.cpp  scenegraphtreeview.h  scenegraphwidget.cpp  scenegraphwidget.h  scenegraphwidget.ui
tooldetailwidget/selectwidget/: selectwidget.cpp  selectwidget.h  selectwidget.ui
toolswidget/: toolswidget.cpp  toolswidget.h  toolswidget.ui
toolswidget/tool/: move.cpp  move.h  select.cpp  select.h  tool.cpp  tool.h
unix_install/: SaharaStudio.desktop
